# network_monitor

./: README.md  pyproject.toml
src/network_monitor/: __init__.py  app.py
